fixed text align on 8 ball answers

--- a/css/style.css
+++ b/css/style.css
@@ -4,33 +4,34 @@ body {
   margin: 0px;
   padding: 0px;
   background-color: #f8f8f8;
-  background-image: url('bkgd2.png');
+  background-image: url("bkgd2.png");
 }
 .page {
   width: 80%;
   max-width: 960px;
   margin: 0 auto;
 }
-.ball, .button {
+.ball,
+.button {
   margin: 0 auto;
-  position:relative; 
-  width:80%;
+  position: relative;
+  width: 80%;
 }
 .answer {
-  position:absolute;
-  width:14%;
-  top:50%;
-  left:50%;
-  margin-top:-60px;
-  margin-left:-65px;
-  font: 18px 'Open Sans', Helvetica, Arial, sans-serif;
+  position: absolute;
+  width: 14%;
+  top: 50%;
+  left: 50%;
+  margin-top: -60px;
+  margin-left: -65px;
+  font: 18px "Open Sans", Helvetica, Arial, sans-serif;
   color: #222;
   font-weight: bold;
   text-transform: uppercase;
 }
 
 #questionButton {
-  font: 26px 'Montserrat', Helvetica, Arial, sans-serif;
+  font: 26px "Montserrat", Helvetica, Arial, sans-serif;
   border-radius: 5px;
   border: none;
   color: #f8f8f8;
@@ -49,8 +50,17 @@ header span {
   color: #f16059;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-family: "Montserrat", sans-serif;
+}
+
+p {
+  text-align: center;
 }
 
 footer p {
@@ -59,4 +69,3 @@ footer p {
   text-transform: uppercase;
   font-size: 12px;
 }
-
